Fixed spacing issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,12 +151,12 @@ body {
 
 .small-text {
   font-size: 20px;
-  line-height: 24px;
+  line-height: 28px;
   font-weight: 400;
 
   @media screen and (max-width: 600px) {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 24px;
   }
 }
 
